[bugfix] change base url, change css, delete duplicate navbar - base url 환경 변수로 만듦 - css 변경 내역 - 1. 내용이 header, navbar을 제외한 영역을 차지하도록 css 변경 - 2. vvue-scroll 로 scroll 처리 - 달력 : 일정리스트 스크롤바 안보이도록 수정 - 디데이 : 일정리스트 스크롤바 안보이도록 수정 - 추억 작성 : 버튼 위치 수정 - 나의 쀼 : 추억없음 이미지 위치 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,8 @@ body {
 }
 
 .fixed-width {
+  display: flex;
+  flex-direction: column;
   width: 500px;
   position: relative;
   height: 100dvh;
@@ -43,15 +45,22 @@ body {
     /* 화면 너비가 500px 이하가 되면 요소 너비를 100%로 고정*/
     width: 100%;
   }
+  -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  scrollbar-width: none; /* 파이어폭스 */
 }
 
 fixed-width::-webkit-scrollbar {
   display: none;
 }
 
-.fixed-width {
+.vvue-scroll {
+  overflow-y: auto;
   -ms-overflow-style: none; /* 인터넷 익스플로러 */
   scrollbar-width: none; /* 파이어폭스 */
+}
+
+vvue-scroll::-webkit-scrollbar {
+  display: none;
 }
 
 .ion-sm {
